tests/neg-scalajs/jsconstructortag-error-in-typer.check
-- Error: tests/neg-scalajs/jsconstructortag-error-in-typer.scala:9:39 -------------------------------------------------
9 |  val a = js.constructorTag[ScalaClass] // error
  |                                       ^
  |no given instance of type scala.scalajs.js.ConstructorTag[ScalaClass] was found for parameter tag of method constructorTag in package scala.scalajs.js.
  |I found:
  |
  |    scala.scalajs.js.ConstructorTag.materialize[T]
  |
  |But method materialize in object ConstructorTag does not match type scala.scalajs.js.ConstructorTag[ScalaClass].
-- Error: tests/neg-scalajs/jsconstructortag-error-in-typer.scala:10:39 ------------------------------------------------
10 |  val b = js.constructorTag[ScalaTrait] // error
   |                                       ^
   |no given instance of type scala.scalajs.js.ConstructorTag[ScalaTrait] was found for parameter tag of method constructorTag in package scala.scalajs.js.
   |I found:
   |
   |    scala.scalajs.js.ConstructorTag.materialize[T]
   |
   |But method materialize in object ConstructorTag does not match type scala.scalajs.js.ConstructorTag[ScalaTrait].
-- Error: tests/neg-scalajs/jsconstructortag-error-in-typer.scala:11:45 ------------------------------------------------
11 |  val c = js.constructorTag[ScalaObject.type] // error
   |                                             ^
   |no given instance of type scala.scalajs.js.ConstructorTag[ScalaObject.type] was found for parameter tag of method constructorTag in package scala.scalajs.js.
   |I found:
   |
   |    scala.scalajs.js.ConstructorTag.materialize[T]
   |
   |But method materialize in object ConstructorTag does not match type scala.scalajs.js.ConstructorTag[ScalaObject.type].
